trying to fix the slide in motion for the collapsable navbar. unsuccessful so far

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,7 +1,5 @@
 .about-container {
-  height: 450px;
   display: flex;
-
 }
 
 .about {
@@ -9,7 +7,12 @@
   flex-direction: column;
   justify-content: space-between;
   background-image: linear-gradient(290deg,#00aeff61, #ff8800b8);
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+}
 
+.img {
+  margin: 0 1rem;
 }
 
 .about h1, p {
@@ -17,7 +20,6 @@
   padding: 1rem;
   max-width: 80%;
 }
-
 
 .about p {
   margin-top: 40px;
@@ -32,12 +34,47 @@
 }
 
 .about li {
+  height: 50px;
+  width: 50px;
   margin: auto 20px auto 0;
+  background-color: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s ease;
+}
+
+#linkedin:hover {
+  background-color: #0A66C2;
+  color: white;
+}
+
+#github:hover {
+  background-color: #181717;
+  color: white;
+}
+
+#facebook:hover {
+  color: white;
+  background-color: #1877F2;
+}
+
+#instagram:hover {
+  color: white;
+  background: #f09433;
+  background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+  background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+  background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+
 }
 
 .svg-inline--fa {
-  height: 50px;
+  margin: auto;
+  height: 20px;
 }
+
 
 .about button {
   margin-right: 20px;
@@ -47,6 +84,14 @@
   border-radius: 30px;
   width: 150px;
   height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all .1s ease-in-out;
+}
+
+.about button:hover {
+  background-color: rgba(0, 0, 0, 0.644);
 }
 
 .img {
