--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,5 +1,4 @@
 .navbar {
-  /* background-color: #333; */
   color: black;
   display: flex;
   justify-content: space-between;
@@ -40,25 +39,34 @@
 }
 
 .navbar-menu {
-  display: flex;
+  display: none;
   flex-direction: column;
   position: absolute;
   top: 100%;
-  right: -100%;
-  width: 100%;
+  right: 0;
+  width: 0%;
   padding: 0;
   margin: 0;
   color: black;
   list-style: none;
-  transition: right 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   background-color: #fff;
+  visibility: hidden;
 }
 
 .navbar-menu.active {
+  display: block;
+  visibility: visible;
+  width: 100%;
   height: 100vh;
   right: 0;
+  transform: translateX(100%);
+  transition: all 0.2s ease-in-out;
 }
 
+.navbar-menu.active {
+  transform: translateX(0%);
+}
 
 .navbar-item {
   margin: 0.5rem 0;
