--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,13 +1,19 @@
 .projects-container {
   display: grid;
   grid-template-columns:  1fr 1fr;
-
+  grid-gap: 1rem;
+  margin: 0 1rem 1rem 1rem;
 }
 
 .projects {
   color: white;
   background-size: cover;
   background-position: center;
+  transition: all 0.8s ease;
+}
+
+.projects:hover {
+  transform: skew(-1deg);
 }
 
 .projects h2, p {
@@ -17,6 +23,5 @@
 
 .projects p {
   font-weight: 500;
-  /* opacity: .7; */
   padding: 5px;
 }
