--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,6 @@ code {
 .standard-block {
   border-radius: 10px;
   padding: 20px;
-  margin: 1rem;
+  /* margin: 1rem; */
   height: 400px;
 }
